--- a/.github/workflows/daily_commit.yml
+++ b/.github/workflows/daily_commit.yml
@@ -1,10 +1,10 @@
 name: Daily Commit
 
-# Run once per day at 08:30 UTC (change to your preferred time)
+# Schedule to run daily at 08:30 UTC
 on:
   schedule:
-    - cron: '30 8 * * *'  # 08:30 UTC every day
-  workflow_dispatch:  # allows manual triggering
+    - cron: '30 8 * * *'
+  workflow_dispatch:  # allows manual trigger
 
 jobs:
   daily-commit:
@@ -14,7 +14,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Make daily change 22f3000730@ds.study.iitm.ac.in
-        run: echo "Last run: $(date)" >> daily_commit.txt
+        run: |
+          echo "Last run: $(date)" >> daily_commit.txt
 
       - name: Configure Git 22f3000730@ds.study.iitm.ac.in
         run: |
